k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cks-practice-labs
  labels:
    app.kubernetes.io/name: cks-practice-labs
    app.kubernetes.io/part-of: cks-labs
