k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cks-practice-labs
  namespace: cks-practice-labs
  labels:
    app.kubernetes.io/name: cks-practice-labs
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cks-practice-labs
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
